# LogObsPoC

./: .gitignore  Makefile  README.md  RFC.md  TODO.md  app.py  old_Makefile  pyproject.toml
backend/: .env  .gitignore  Makefile  Makefile.lint  RFC.md  app.py  config.py  conftest.py  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  app.py  config.py  env.py  main.py
backend/api/auth/: __init__.py  endpoints.py
backend/api/database/: __init__.py  interface.py
backend/api/health_check/: __init__.py  (+1 more)
backend/auth/: __init__.py  main.py  router.py
backend/database/: __init__.py  config.py  interface.py  models.py
backend/exceptions/: README_architecture.md  README_internal_codes.md  _0_500_base.py  _1xxx_auth.py  _2xxx_api.py  _3xxx_core.py  __init__.py  exception_handlers.py  generate_docs.py
backend/logs/: safe.2025-07-13_17-43-20_700156.json  safe.2025-07-13_18-45-51_143838.json  safe.json  unsafe.2025-07-13_18-05-27_158332.json  unsafe.2025-07-13_19-06-39_921600.json  unsafe.json
backend/loguru_logger/: __init__.py  log_config.py  log_context_manager.py  log_decorator.py  log_structure.py  logger_setup.py  loguru_envs.py  new_logger.py  safe_log.py
backend/middleware/: __init__.py  http_middleware.py  logic.py
backend/pdf_diff_manager/: compare_two_PDF.py  text_from_pdf_extractor.py
backend/proj_exc/: __init__.py  api.py  base.py  db.py  exception_handlers.py
backend/rabbit/: __init__.py  main.py
backend/rbac/: logic.py
backend/routers/: __init__.py
backend/worker/: app.py  config.py  main.py
(+187 files in other folders)
