[project]
name = "Project Template"
description = "A production ready template with FastAPI and best design patterns."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Radoslaw Kuzma", email = "radoslaw.kuzma@devnoplan.com" }]
requires-python = ">=3.13"

[tool.black]
target-version = ["py313"]
line-length = 79
force-exclude = "\\.(git|mypy_cache|venv|idea)"

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build",
    "dist", "node_modules", "site-packages", "venv"
]
line-length = 79
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "C90", "RUF"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.bandit]
targets = ["backend", "tests"]
exclude = ["migrations", "__pycache__"]
severity = "LOW"

[tool.safety]
full-report = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["api/v2/tests"]
#python_paths = [".."]